infrastructure/observability-ui/meshery/deployment-default-meshery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: service-mesh-management
    app.kubernetes.io/instance: meshery
    app.kubernetes.io/name: meshery
  name: meshery
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: meshery
      app.kubernetes.io/name: meshery
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: service-mesh-management
        app.kubernetes.io/instance: meshery
        app.kubernetes.io/name: meshery
        app.kubernetes.io/version: stable-v0.8.200
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: PROVIDER_BASE_URLS
        - name: PROVIDER
          value: None
        - name: ADAPTER_URLS
          value: localhost:10000
        - name: MESHERY_ADAPTER_CILIUM_ENABLED
          value: 'true'
        image: meshery/meshery
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/system/ping
            port: http
            scheme: HTTP
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: meshery
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/system/ping
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 256Mi
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /api/system/ping
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: meshery
      serviceAccountName: meshery
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
