infrastructure/observability-ui/meshery/service-default-meshery.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: service-mesh-management
    app.kubernetes.io/instance: meshery
    app.kubernetes.io/name: meshery
  name: meshery
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 9081
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: meshery
    app.kubernetes.io/name: meshery
  sessionAffinity: None
  type: ClusterIP
